scripts/nullness/annotator/url9ba68db77a_samkio_Dungeonator_tgz-pJ8-net_woopa_dungeon_core_Main2J8.txt
../annotator/url9ba68db77a_samkio_Dungeonator_tgz-pJ8-net_woopa_dungeon_core_Main2J8/src/net/woopa/dungeon/core/CoreRoom.java:22: error: [assignment] incompatible types in assignment.
	private Schematic room_map = null;
	                             ^
  found   : null (NullType)
  required: @Initialized @NonNull Schematic
../annotator/url9ba68db77a_samkio_Dungeonator_tgz-pJ8-net_woopa_dungeon_core_Main2J8/src/net/woopa/dungeon/core/CoreRoom.java:30: error: [initialization.fields.uninitialized] the constructor does not initialize fields: type, special_dir
	public CoreRoom(Grid grid) {
	       ^
../annotator/url9ba68db77a_samkio_Dungeonator_tgz-pJ8-net_woopa_dungeon_core_Main2J8/src/net/woopa/dungeon/core/CoreRoom.java:31: error: [assignment] incompatible types in assignment.
		this.roomPopulator = new RoomPopulator(this);
		                     ^
  found   : @UnderInitialization(net.woopa.dungeon.core.RoomPopulator.class) @NonNull RoomPopulator
  required: @Initialized @NonNull RoomPopulator
../annotator/url9ba68db77a_samkio_Dungeonator_tgz-pJ8-net_woopa_dungeon_core_Main2J8/src/net/woopa/dungeon/core/CoreRoom.java:31: error: [argument] incompatible argument for parameter r of RoomPopulator constructor.
		this.roomPopulator = new RoomPopulator(this);
		                                       ^
  found   : @UnderInitialization @NonNull CoreRoom
  required: @Initialized @NonNull CoreRoom
../annotator/url9ba68db77a_samkio_Dungeonator_tgz-pJ8-net_woopa_dungeon_core_Main2J8/src/net/woopa/dungeon/core/CoreRoom.java:33: error: [method.invocation] call to generateRandom() not allowed on the given receiver.
		generateRandom();
		              ^
  found   : @UnderInitialization @NonNull CoreRoom
  required: @Initialized @NonNull CoreRoom
../annotator/url9ba68db77a_samkio_Dungeonator_tgz-pJ8-net_woopa_dungeon_core_Main2J8/src/net/woopa/dungeon/core/CoreRoom.java:34: error: [method.invocation] call to placeRandom() not allowed on the given receiver.
		placeRandom();
		           ^
  found   : @UnderInitialization @NonNull CoreRoom
  required: @Initialized @NonNull CoreRoom
../annotator/url9ba68db77a_samkio_Dungeonator_tgz-pJ8-net_woopa_dungeon_core_Main2J8/src/net/woopa/dungeon/core/CoreRoom.java:124: error: [return] incompatible types in return.
			return null;
			       ^
  type of expression: null (NullType)
  method return type: @Initialized @NonNull Direction
../annotator/url9ba68db77a_samkio_Dungeonator_tgz-pJ8-net_woopa_dungeon_core_Main2J8/src/net/woopa/dungeon/core/CoreRoom.java:153: error: [return] incompatible types in return.
			return null;
			       ^
  type of expression: null (NullType)
  method return type: @Initialized @NonNull Direction
../annotator/url9ba68db77a_samkio_Dungeonator_tgz-pJ8-net_woopa_dungeon_core_Main2J8/src/net/woopa/dungeon/core/CoreDownSchematic.java:119: error: [dereference.of.nullable] dereference of possibly-null reference tmp
		if (!tmp.isEmpty()) {
		     ^
../annotator/url9ba68db77a_samkio_Dungeonator_tgz-pJ8-net_woopa_dungeon_core_Main2J8/src/net/woopa/dungeon/core/Main2.java:11: error: [assignment] incompatible types in assignment.
	public final MaterialManager mm = new MaterialManager(this);
	                                  ^
  found   : @UnderInitialization(net.woopa.dungeon.managers.MaterialManager.class) @NonNull MaterialManager
  required: @Initialized @NonNull MaterialManager
../annotator/url9ba68db77a_samkio_Dungeonator_tgz-pJ8-net_woopa_dungeon_core_Main2J8/src/net/woopa/dungeon/core/Main2.java:11: error: [argument] incompatible argument for parameter m of MaterialManager constructor.
	public final MaterialManager mm = new MaterialManager(this);
	                                                      ^
  found   : @UnderInitialization @NonNull Main2
  required: @Initialized @NonNull Main2
../annotator/url9ba68db77a_samkio_Dungeonator_tgz-pJ8-net_woopa_dungeon_core_Main2J8/src/net/woopa/dungeon/core/Main2.java:13: error: [assignment] incompatible types in assignment.
	public final SchematicManager scm = new SchematicManager(this);
	                                    ^
  found   : @UnderInitialization(net.woopa.dungeon.managers.SchematicManager.class) @NonNull SchematicManager
  required: @Initialized @NonNull SchematicManager
../annotator/url9ba68db77a_samkio_Dungeonator_tgz-pJ8-net_woopa_dungeon_core_Main2J8/src/net/woopa/dungeon/core/Main2.java:13: error: [argument] incompatible argument for parameter main of SchematicManager constructor.
	public final SchematicManager scm = new SchematicManager(this);
	                                                         ^
  found   : @UnderInitialization @NonNull Main2
  required: @Initialized @NonNull Main2
../annotator/url9ba68db77a_samkio_Dungeonator_tgz-pJ8-net_woopa_dungeon_core_Main2J8/src/net/woopa/dungeon/core/Main2.java:36: error: [dereference.of.nullable] dereference of possibly-null reference l
		l.show();
		^
../annotator/url9ba68db77a_samkio_Dungeonator_tgz-pJ8-net_woopa_dungeon_core_Main2J8/src/net/woopa/dungeon/managers/MaterialManager.java:25: error: [iterating.over.nullable] iterating over possibly-null reference ms
		for (Material m : ms) {
		                  ^
../annotator/url9ba68db77a_samkio_Dungeonator_tgz-pJ8-net_woopa_dungeon_core_Main2J8/src/net/woopa/dungeon/managers/SettingsManager.java:17: error: [iterating.over.nullable] iterating over possibly-null reference ps
		for (Property p : ps) {
		                  ^
../annotator/url9ba68db77a_samkio_Dungeonator_tgz-pJ8-net_woopa_dungeon_core_Main2J8/src/net/woopa/dungeon/managers/SettingsManager.java:23: error: [argument] incompatible argument for parameter s of Integer.parseInt.
		return Integer.parseInt(properties.getProperty(p.getKey()));
		                                              ^
  found   : @Initialized @Nullable String
  required: @Initialized @NonNull String
../annotator/url9ba68db77a_samkio_Dungeonator_tgz-pJ8-net_woopa_dungeon_core_Main2J8/src/net/woopa/dungeon/managers/SchematicManager.java:35: error: [iterating.over.nullable] iterating over possibly-null reference ss
		for (Schematic s : ss) {
		                   ^
../annotator/url9ba68db77a_samkio_Dungeonator_tgz-pJ8-net_woopa_dungeon_core_Main2J8/src/net/woopa/dungeon/managers/SchematicManager.java:46: error: [iterating.over.nullable] iterating over possibly-null reference ss
		for (Schematic s : ss) {
		                   ^
../annotator/url9ba68db77a_samkio_Dungeonator_tgz-pJ8-net_woopa_dungeon_core_Main2J8/src/net/woopa/dungeon/core/CoreSchematic.java:120: error: [dereference.of.nullable] dereference of possibly-null reference tmp
	    if(!tmp.isEmpty()) {
	        ^
../annotator/url9ba68db77a_samkio_Dungeonator_tgz-pJ8-net_woopa_dungeon_core_Main2J8/src/net/woopa/dungeon/datatypes/Level.java:14: error: [method.invocation] call to setGrid(net.woopa.dungeon.datatypes.Grid) not allowed on the given receiver.
		this.setGrid(this.levelCreator.generate(levelSize, startLocation,
		            ^
  found   : @UnderInitialization(net.woopa.dungeon.datatypes.Level.class) @NonNull Level
  required: @Initialized @NonNull Level
../annotator/url9ba68db77a_samkio_Dungeonator_tgz-pJ8-net_woopa_dungeon_core_Main2J8/src/net/woopa/dungeon/datatypes/Level.java:40: error: [dereference.of.nullable] dereference of possibly-null reference grid
		grid.show();
		^
../annotator/url9ba68db77a_samkio_Dungeonator_tgz-pJ8-net_woopa_dungeon_core_Main2J8/src/net/woopa/dungeon/datatypes/Level.java:41: error: [dereference.of.nullable] dereference of possibly-null reference start
		System.out.println(" Start" + start.toString() + ":" + startDir
		                              ^
23 errors
